# lionjudge.sfm

./: config.yaml  requirements.txt  setup.py  setup_slam.py
annotation_gui_gcp/: GUI.py  gcp_manager.py  image_sequence_view.py  main.py  orthophoto_manager.py  orthophoto_view.py  run_ba.py  run_ba_single_rec.py  view.py
annotation_gui_gcp/cad_viewer/: cad_view.py
annotation_gui_gcp/cad_viewer/static/js/: main.js
data/berlin/: config.yaml
doc/source/: building.rst
opensfm/: config.py  dataset.py  dense.py  feature_loading.py  features.py  matching.py  multiview.py  pairs_selection.py  reconstruction.py  reconstruction_mod.py  reconstruction_old.py  report.py  sift_gpu.py  stats.py  tracking.py  types.py
opensfm/actions/: export_report.py
opensfm/commands/: create_tracks.py  detect_features.py  extract_metadata.py  reconstruct.py
opensfm/slam/: slam_debug.py  slam_initializer.py  slam_mapper.py  slam_system.py  slam_tracker.py
opensfm/src/: CMakeLists.txt  bundle.h  csfm.cc  depthmap.cc  depthmap.h  depthmap_test.cc  matching.cc  matching.h  point.cc  point.h  reconstruction_alignment.h  theia_bind.cc  theia_bind.h
opensfm/src/bundle/: bundle_adjuster.h
opensfm/src/bundle/src/: absolute_motion_terms.h  bundle_adjuster.cc  error_utils.h  motion_prior_terms.h  relative_motion_terms.h
opensfm/src/cmake/: FindMKL.cmake
opensfm/src/dense/: CMakeLists.txt  depthmap_bind.h  fusion.h
opensfm/src/dense/python/: pybind.cc
opensfm/src/dense/src/: depthmap.cc  fusion.cc
opensfm/src/geometry/: camera.h  camera_functions.h  triangulation.h
opensfm/src/geometry/python/: pybind.cc
opensfm/src/geometry/src/: camera.cc  triangulation.cc
opensfm/src/geometry/test/: camera_test.cc
opensfm/src/map/: CMakeLists.txt  camera.h  camera_py.h  defines.h  landmark.h  map.h  map_io.h  observation.h  pose.h  shot.h  slam_shot_data.h
opensfm/src/map/python/: pybind.cc
opensfm/src/map/src/: ba_helpers.cc  camera.cc  landmark.cc  map.cc  map_io.cc  shot.cc
opensfm/src/sfm/: observation.h  tracks_manager.h
opensfm/src/sfm/python/: pybind.cc
opensfm/src/slam/: CMakeLists.txt  guided_matching.h  orb_extractor_bind.h  pyslam_utilities.h  slam_map.h  slam_utilities.h
opensfm/src/slam/python/: pybind.cc
opensfm/src/slam/src/: guided_matching.cc  slam_map.cc  slam_utilities.cc
opensfm/synthetic_data/: synthetic_examples.py  synthetic_metrics.py  synthetic_scene.py
opensfm/test/test_datastructures/: CMakeLists.txt  test_datastructures.cc  test_datastructures.py
openslam/: openslam.py  run_openslam.py  slam_config.py  slam_debug.py  slam_feature_extractor.py  slam_initializer.py  slam_input_sources.py  slam_mapper.py  slam_matcher.py  slam_matcher_instance.py  slam_system.py  slam_tracker.py  slam_types.py  slam_utils.py  speed_up_tests.py
openslam/src/: CMakeLists.txt  cslam.cc  cslam_types.cc  guided_matching_utils_py.cc  slam_debug.cc  slam_debug.h  slam_utilities.cc  slam_utilities.h  types.h
openslam/src/slam_datastructures/: camera.cc  camera.h  defines.h  frame.cc  frame.h  keyframe.cc  keyframe.h  landmark.cc  landmark.h  local_map_cleaner.cc  local_map_cleaner.h  slam_reconstruction.cc  slam_reconstruction.h
